--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ requires = ["meson-python>0.15.0", "numpy >= 1.25.0"]
 
 
 [project]
-name = "plateflex"
+name = "platecurie"
 version = "0.2.0"
-description = "Python package for estimating lithospheric elastic thickness"
+description = "Python package for mapping Curie depth"
 authors = [
     { name = "Pascal Audet", email = "pascal.audet@uottawa.ca" }
 ]
@@ -25,6 +25,6 @@ classifiers = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/paudetseis/PlateFlex"
-Documentation = "https://paudetseis.github.io/PlateFlex"
-"Bug Tracker" = "https://github.com/paudetseis/PlateFlex/issues"
+Homepage = "https://github.com/paudetseis/PlateCurie"
+Documentation = "https://paudetseis.github.io/PlateCurie"
+"Bug Tracker" = "https://github.com/paudetseis/PlateCurie/issues"
